<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info.ScholarshipInfoFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="416dp"
        android:layout_height="25dp"
        android:contentDescription="@string/uw_purple_bar"
        android:src="@drawable/bar_rtangle"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-3dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="26dp"
        android:layout_height="22dp"
        android:contentDescription="@string/uw_w_logo"
        android:src="@drawable/w_logo_white"
        tools:ignore="MissingConstraints,VisualLintBounds"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="-2dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <LinearLayout
        android:layout_width="323dp"
        android:layout_height="587dp"
        android:layout_marginTop="45dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/scholarship_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/scholarships"
                    android:textColor="#85754D"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fund_for_education_abroad"
                    android:textColor="#4B2E83"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fund_for_education_abroad_aims_to_open_life_changing_international_experiences_to_students_of_color_and_first_generation_college_students_by_supporting_them_before_during_and_after_their_study_abroad_program"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/gilman_scholarship"
                    android:textColor="#4B2E83"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/funded_through_the_u_s_department_of_state_the_benjamin_a_gilman_scholarship_works_to_provide_students_with_limited_financial_means_access_to_international_programs_where_they_will_learn_skills_critical_to_our_national_security_and_economic_prosperity"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/office_of_global_affairs_study_abroad_scholarship"
                    android:textColor="#4B2E83"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/generously_funded_through_the_bamford_foundation_the_office_of_global_affairs_will_provide_several_1_000_scholarships_to_students_participating_in_study_abroad_programs"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/still_have_questions"
                    android:textColor="#4B2E83"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/we_are_here_to_help_you_organize_your_finances_for_additional_support_exploring_scholarship_opportunities_schedule_an_appointment_with_an_advisor_and_check_out_the_home_page_for_the_office_of_global_affairs"
                    android:layout_marginBottom="10dp"/>

                <Button
                    android:id="@+id/book_appointment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_an_appointment"
                    android:layout_gravity="center"/>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


